force-app/main/default/objects/Company_Specifications__c/Company_Specifications__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Company Specifications</label>
</CustomObject>