force-app/main/default/objects/Company_Specifications__c/fields/CGST_Rate__c.field-meta.xml
<CustomField>
    <fullName>CGST_Rate__c</fullName>
    <label>CGST  Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>