force-app/main/default/objects/Company_Specifications__c/fields/Corporate_Identity__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Identity__c</fullName>
    <label>Corporate Identity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>