force-app/main/default/objects/Company_Specifications__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <label>Name</label>
    <length>233</length>
    <type>Text</type>
</CustomField>