force-app/main/default/objects/Company_Specifications__c/fields/Sac_Code__c.field-meta.xml
<CustomField>
    <fullName>Sac_Code__c</fullName>
    <label>Sac Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>